Add empty contact page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -59,6 +59,7 @@
             <li class="{{#if home}}active{{/if}}"><a href="/">Home</a></li>
             <li class="{{#if event}}active{{/if}}"><a href="event">The Day</a></li>
             <li class="{{#if conductors}}active{{/if}}"><a href="conductors">Conductors</a></li>
+            <li class="{{#if contact}}active{{/if}}"><a href="contact">Contact</a></li>
           </ul>
         </div>
       </div>
