Use proper tel: protocol

--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -5,6 +5,6 @@
     <h3>Email</h3>
     <p>For all enquiries, please email <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> <a href="mailto:info@beethovathon.com">info@beethovathon.com</a></p>
     <h3>Telephone</h3>
-    <p>Please contact Craig Lawton on <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> <a href="callto:07814305261">07814 305 261</a></p>
+    <p>Please contact Craig Lawton on <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> <a href="tel:07814305261">07814 305 261</a></p>
   </div>
 </div>
