Use justgiving group link

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -81,7 +81,7 @@
         <img src="media/facebook.png" alt="Facebook"/>
       </a></span>
   
-      <span><a href='http://www.justgiving.com/Beethovathon' title='JustGiving - Sponsor me now!' target='_blank'><img src='http://www.justgiving.com/App_Themes/JustGiving/images/badges/badge10.gif' width='270' height='50' alt='JustGiving - Sponsor me now!' /></a></span>
+      <span><a href="https://www.justgiving.com/teams/beethovathon" title='JustGiving - Sponsor me now!' target='_blank'><img src='http://www.justgiving.com/App_Themes/JustGiving/images/badges/badge10.gif' width='270' height='50' alt='JustGiving - Sponsor me now!' /></a></span>
     </footer> 
 
     <audio src="media/horn.mp3" preload="auto"></audio>
