Added Robin & Chris

--- a/views/conductors.handlebars
+++ b/views/conductors.handlebars
@@ -18,6 +18,8 @@
       <p> He became the conductor of the Aylesbury Youth Orchestra in 2008 and has performed regularly at the 'Music For Youth' finals in Birmingham Symphony Hall. Holding the position of Leader and Assistant conductor of the Haslemere Music Society, he has had the opportunity to perform and conduct many major symphonic &amp; operatic works. In 2006 he founded the Charity Symphony Orchestra which has raised over £30,000 for various charities. Tom also enjoys working with the Buckinghamshire County Youth Orchestra as a tutor. Other recent engagements have included conducting the St. Albans Symphony Orchestra, Welwyn Garden City Symphony &amp; Chorus, Buckingham Chamber Orchestra, Sidcup Symphony Orchestra, Bridgenorth Symphonia, London Rehearsal Orchestra, Woking Chamber Orchestra, Didcot &amp; Wallingford Symphony Orchestra and the Trinity Camerata. In September 2013, Tom started working as a Guest Conductor with the Surrey County Youth Orchestra and had the opportunity to have a workshop with Freddie Kempf and the Royal Philharmonic Orchestra and has been invited back. He has also recently set up a new Orchestra in his hometown of Marlow which is growing in strength and started working towards a Royal Albert Hall concert with the High Wycombe Youth Orchestra in April.</p>
       <p>In December 2013 he had his first conducting competition experience competing in the Cadaques International Conducting Competetion and over the Summer he studied with Rodolfo Saglimbeni, Denise Ham and Toby Purser on this years George Hurst Conductors' Course at the Sherborne (formerly Canford) Summer Music School. He is also really looking forward to working with the Pelly Concert Orchestra as a guest conductor in the new year.</p>
     </div>
+  </div>
+  <div class="row">
     <div class="col-md-6">
       <h2>Paul Ingram</h2>
       <img class="conductor-pic" src="media/paul.jpg"/>
@@ -33,8 +35,23 @@
       <p>Dominic Harries began conducting whilst studying Computer Science at the University of Southampton.  He has been assistant conductor of the Wind Band, Sinfonietta and Symphony Orchestra, and is currently conductor of the University String Orchestra and Principal Guest Conductor of the Charity Symphony Orchestra.</p>
       <p>In these posts, Dominic has been privileged to work with some outstanding soloists including renowned pianist David Owen Norris in a performance of his own piano concerto.</p>
       <p>Dominic has conducted in Prague at the Dvorak Hall, home of the Czech Philharmonic Orchestra.  He subsequently conducted a successful week-long orchestral course for freshers new to the University of Southampton, which included a memorable performance of Berlioz's Symphonie Fantastique.</p>
-      <p>Also a keen horn player and violinist, Dominic runs Hornography, an ensemble made up of horn players from Southampton and the surrounding area.  He has recently taken up the accordion, which he has played with the Bournemouth Symphony Orchestra.</p>
-
+      <p>Also a keen horn player and violinist, Dominic runs Hornography, an ensemble made up of horn players from Southampton and the surrounding area.</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6">
+      <h2>Robin Browning</h2>
+      <img class="conductor-pic" src="media/robin.jpg"/>
+      <p>British conductor Robin Browning is increasingly in demand with orchestras both in the UK and abroad. Robin made his debut with the Royal Philharmonic Orchestra at the Barbican Centre in London, in a concert which was broadcast on Classic FM. He has conducted the Hallé, English Northern Philharmonia, Northern Sinfonia, Danish Radio Symphony Orchestra, Ensemble Intercontemporain, St Petersburg Festival Orchestra, and Estonian National Youth Orchestra. 2011 marked Robin’s US debut, conducting three subscription-series concerts with the Boise Philharmonic. In 2013, he was invited to conduct Milton Keynes City Orchestra.</p>
+      <p>Robin recently assisted Sakari Oramo for the UK Premiere of Esa-Pekka Salonen’s Violin Concerto with the BBC Symphony Orchestra at the Barbican. He has also been assistant conductor to Benjamin Zander with the Philharmonia Orchestra, and assisted Mark Elder with both the LPO and OAE. Since taking second prize in the NAYO Conducting Competition, and winning the inaugural Boosey & Hawkes Award at the Edinburgh Festival, Robin is now firmly established as music director of five British orchestras, including the highly-regarded de Havilland Philharmonic. He has performed in some of the world’s most famous concert halls, including Snape Maltings, London’s Cadogan Hall, the Rudolfinum in Prague, and the Banff Centre in Canada. In 2008, Robin gave a concert at the Olympic Stadium, Nanjing, conducting live on Chinese television before an audience of 70 million. He has worked with a wide array of soloists, including Guy Johnston, Aled Jones, Jack Liebeck , John Lill, Craig Ogden and Raphael Wallfisch.</p>
+      <p>Robin studied at the Accademia Chigiana, Siena, with Myung-Whun Chung and the legendary Ilya Musin. He furthered his training in the USA with Joseph Gifford, and was invited to Estonia for masterclasses with Neeme and Paavo Järvi at the Oistrakh Festival. Robin also studied with Sir Charles Mackerras, Sian Edwards and Benjamin Zander, and participated in the first ever Conductor Development Programme with Milton Keynes City Orchestra in 2012.</p>
+      <p>Passionately committed to the training of younger musicians, Robin has guest-conducted orchestras at both Trinity Laban Conservatoire and Guildhall School of Music, and works regularly with young conductors at the University of Southampton. In 2008 he was involved in the Barbican Young Orchestra project, preparing the inaugural orchestra for Sir Colin Davis. Robin is also dedicated to contemporary music and recordings: since making his first professional studio-recording in 2008, he has released three more – all are available from iTunes and Amazon.</p>
+    </div>
+    <div class="col-md-6">
+      <h2>Christopher Tarrant</h2>
+      <img class="conductor-pic" src="media/chris.jpg"/>
+      <p>Christopher studied conducting with Levon Parikian and Keith Smith. As a music student at Oxford University, and later at Royal Holloway, University of London, he worked with several orchestras, including the Royal Holloway Philharmonic. In 2011, Christopher conducted concerts in Budapest and Eger on the orchestra’s tour to Hungary, and he has also conducted concerts in London, the Midlands, and the South of England. He is in the final stages of completing his PhD on Schubert’s instrumental music.</p>
+      <p>Christopher is currently pursuing a career as a musicologist, and has held academic positions at Newcastle University, Royal Holloway, and Oxford, where he is currently working as a visiting tutor.</p>
     </div>
   </div>
 </div>
