--- a/views/event.handlebars
+++ b/views/event.handlebars
@@ -3,6 +3,7 @@
     <div class="col-sm-6">
       <h3>Schedule</h3>
       <p>Saturday 21st March 2015</p>
+      <h4>Main Hall</h4>
       <table class="schedule">
         <tr>
           <td class="time">11:00</td>
@@ -35,6 +36,8 @@
           </td>
         </tr>
       </table>
+      <h4>Foyer</h4>
+      <p>Throughout the day, postgraduate music students from the university will perform a selection of Beethoven Piano Sonatas.</p>
     </div>
 
     <div class="col-sm-6">
